@@ -19,7 +19,8 @@
 - Added ~Data.Radical~ for types that support computing square roots.
 - Added ~Data.Foldable.Sort~ which has a faster sort implementation
   (that will take any Foldable and return an Vector.)
-- Added ~Data.Cyclic~ and ~Data.Vector.NonEmpty~ modules
+- Added ~Data.Cyclic~ and ~Data.Vector.NonEmpty~ modules.
+- Added Uniform and UniformRange instances for ~Ext~.
 
 ** 0.14
 
